# jig

./: .pre-commit-config.yaml  AGENTS.md  NOTICE  README.md  dagger.json  pyproject.toml
jig/: CMakeLists.txt  package.xml
jig/cmake/: jig_auto_interface_package.cmake  jig_auto_package.cmake
jig/include/jig/: action_server.hpp  base_node.hpp  call_sync.hpp  compat.hpp  default_qos_handlers.hpp  fixed_string.hpp  publisher.hpp  qos_helpers.hpp  service.hpp  session.hpp  subscriber.hpp  sync_group.hpp  timer.hpp
jig/include/jig/old/: action_server.hpp  context.hpp  fixed_string.hpp  functional_node.hpp  subscription.hpp  thread.hpp  timer.hpp
jig/jig/: __init__.py  _compat.py  action_server.py  base_node.py  default_qos_handlers.py  publisher.py  qos_helpers.py  service.py  session.py  subscriber.py  sync_group.py  timer.py  transition.py
jig/schemas/: interface.schema.yaml  output.schema.yaml  parameter.schema.yaml
jig/scripts/: generate_node_interface.py
jig/scripts/templates/: node_interface.hpp.jinja2  node_interface.py.jinja2  node_registration.cpp.jinja2
jig/stubs/tf2_py-stubs/: __init__.pyi
jig/tests/: README.md  accept_outputs.sh  run_tests.sh  test_generate_node_interface.py
jig/tests/fixtures/: .gitignore
jig/tests/fixtures/action_clients_mixed/: input.yaml
jig/tests/fixtures/action_clients_mixed/expected_cpp/: action_clients_mixed.yaml  action_clients_mixed_interface.hpp  action_clients_mixed_interface.params.yaml  action_clients_mixed_registration.cpp
jig/tests/fixtures/action_clients_mixed/expected_python/: action_clients_mixed.yaml  interface.py
jig/tests/fixtures/action_clients_only/: input.yaml
jig/tests/fixtures/action_clients_only/expected_cpp/: action_clients_only.yaml  action_clients_only_interface.hpp  action_clients_only_interface.params.yaml  action_clients_only_registration.cpp
jig/tests/fixtures/action_clients_only/expected_python/: action_clients_only.yaml  interface.py
jig/tests/fixtures/action_servers_mixed/: input.yaml
jig/tests/fixtures/action_servers_mixed/expected_cpp/: action_servers_mixed.yaml  action_servers_mixed_interface.hpp  action_servers_mixed_interface.params.yaml  action_servers_mixed_registration.cpp
jig/tests/fixtures/action_servers_mixed/expected_python/: _parameters.py  action_servers_mixed.yaml  interface.py
jig/tests/fixtures/action_servers_only/: input.yaml  test_output.hpp
jig/tests/fixtures/action_servers_only/expected_cpp/: action_servers_only.yaml  action_servers_only_interface.hpp  action_servers_only_interface.params.yaml  action_servers_only_registration.cpp
jig/tests/fixtures/action_servers_only/expected_python/: action_servers_only.yaml  interface.py
jig/tests/fixtures/complex_types/: input.yaml
jig/tests/fixtures/complex_types/expected_cpp/: complex_types.yaml  complex_types_interface.hpp  complex_types_interface.params.yaml  complex_types_registration.cpp
jig/tests/fixtures/complex_types/expected_python/: complex_types.yaml  interface.py
jig/tests/fixtures/empty_node/: input.yaml
jig/tests/fixtures/empty_node/expected_cpp/: empty_node.yaml  empty_node_interface.hpp  empty_node_interface.params.yaml  empty_node_registration.cpp
jig/tests/fixtures/empty_node/expected_python/: empty_node.yaml  (+1 more)
jig/tests/fixtures/for_each_param/: input.yaml
jig/tests/fixtures/manually_created/: input.yaml
jig/tests/fixtures/name_param_substitution/: input.yaml
jig/tests/fixtures/no_node_section/: input.yaml
jig/tests/fixtures/publishers_only/: input.yaml
jig/tests/fixtures/qos_custom/: input.yaml
jig/tests/fixtures/qos_param_substitution/: input.yaml
jig/tests/fixtures/service_clients_mixed/: input.yaml
jig/tests/fixtures/service_clients_only/: input.yaml
jig/tests/fixtures/services_default_qos/: input.yaml
jig/tests/fixtures/services_only/: input.yaml
jig/tests/fixtures/services_with_pubsub/: input.yaml
jig/tests/fixtures/simple_node/: input.yaml
jig/tests/fixtures/subscribers_only/: input.yaml
jig/tests/fixtures/sync_approximate/: input.yaml
jig/tests/fixtures/sync_exact/: input.yaml
jig/tests/fixtures/sync_three_topics/: input.yaml
jig/tests/fixtures/tf_all/: input.yaml
jig/tests/fixtures/tf_broadcaster_only/: input.yaml
jig/tests/fixtures/tf_broadcaster_static_broadcaster/: input.yaml
jig/tests/fixtures/tf_listener_broadcaster/: input.yaml
jig/tests/fixtures/tf_listener_only/: input.yaml
jig/tests/fixtures/tf_listener_static_broadcaster/: input.yaml
jig/tests/fixtures/tf_static_broadcaster_only/: input.yaml
jig/tests/fixtures/with_parameters/: expected_output.params.yaml  input.yaml
jig/tests/install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
jig/tests/log/: latest_build
jig_cli/: README.md  package.xml  pyproject.toml  setup.py
jig_cli/jig_cli/: __main__.py  cli.py
jig_cli/tests/: conftest.py  test_cli.py  test_interface.py  test_interfaces.py
jig_cli/tests/test_ws/: .gitignore  conftest.py
jig_example/: CMakeLists.txt  package.xml
jig_example/interfaces/: external_node.yaml  transition_node.yaml
jig_example/launch/: test.launch.py  test.launch.yaml
jig_example/nodes/action_node/: action_node.cpp  action_node.hpp  interface.yaml
jig_example/nodes/echo_node/: echo_node.cpp  echo_node.hpp  interface.yaml
jig_example/nodes/for_each_node/: for_each_node.py  interface.yaml
jig_example/nodes/lifecycle_node/: interface.yaml  lifecycle_node.py
jig_example/nodes/my_node/: interface.yaml  my_node.cpp  my_node.hpp
jig_example/nodes/py_echo_node/: interface.yaml  py_echo_node.py
jig_example/nodes/py_sync_node/: py_sync_node.py
jig_example/nodes/python_node/: interface.yaml  python_node.py
jig_example/nodes/sync_node/: interface.yaml  sync_node.cpp  sync_node.hpp
jig_example/nodes/tf_node/: interface.yaml  tf_node.py
jig_example/test/: helpers.py  test_actions.py  test_cross_language.py  test_for_each_param.py  test_lifecycle.py  test_parameters.py  test_pub_sub.py  test_qos_handlers.py  test_services.py  test_sync.py  test_tf.py  test_timers.py
(+184 files in other folders)
