<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jig</name>
  <version>0.0.0</version>
  <description>Declarative ROS 2 node scaffolding with built-in best practice.</description>
  <maintainer email="hello@alistairenglish.com">Alistair English</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Dependencies used by the auto build scripts -->
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <!-- Used by jig_auto_interface_package -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>python3-yaml</depend>
  <depend>python3-jinja2</depend>
  <depend>python3-jsonschema</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
