<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jig_example</name>
  <version>0.0.0</version>
  <description>An example node using the jig system.</description>
  <maintainer email="info@greenforgelabs.com.au">Alistair English</maintainer>
  <license>Apache 2.0</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>jig</depend>

  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>

  <!-- for launch files -->
  <exec_depend>clingwrap</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
