<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jig_example</name>
  <version>0.0.0</version>
  <description>An example node using the jig system.</description>
  <maintainer email="hello@alistairenglish.com">Alistair English</maintainer>
  <license>Apache 2.0</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>jig</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>launch_testing</test_depend>
  <test_depend>tf2_msgs</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>lifecycle_msgs</test_depend>
  <test_depend>rcl_interfaces</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
